# LearnOpenGL

./: readme.txt
lesson1/: CMakeLists.txt  build.bat  reg.bat
lesson1/include/glad/glad/: glad.h
lesson1/src/: glad.c  main.cpp
lesson2/: CMakeLists.txt  reg.bat
lesson2/include/: Shader.h
lesson2/shader/: fragment_shader.fs  vertex_shader.vs
lesson2/src/: Shader.cpp  main.cpp
